internal/web/ui/playground/data/web-app/resources/catalog__Deployment__catalog-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2026-08-16T18:20:58Z"
  labels:
    app: catalog-api
  name: catalog-api
  namespace: catalog
  resourceVersion: "17850"
  uid: catalog-api-deploy-uid
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: catalog-api
    spec:
      containers:
      - envFrom:
          - configMapRef:
              name: catalog-config
        image: python:3.12-slim
        imagePullPolicy: IfNotPresent
        name: catalog-api
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
status:
  availableReplicas: 2
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
