internal/web/ui/playground/data/web-app/resources/catalog__Service__catalog-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-08-16T18:20:58Z"
  name: catalog-api-svc
  namespace: catalog
  resourceVersion: "17786"
  uid: catalog-api-svc-uid
spec:
  clusterIP: 10.100.0.22
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: catalog-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
