internal/web/ui/playground/data/web-app/resources/checkout__Deployment__checkout-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2026-08-16T18:20:58Z"
  labels:
    app: checkout-api
  name: checkout-api
  namespace: checkout
  resourceVersion: "17850"
  uid: checkout-api-deploy-uid
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: checkout-api
    spec:
      containers:
      - envFrom:
          - configMapRef:
              name: checkout-config
        image: node:20-alpine
        imagePullPolicy: IfNotPresent
        name: checkout-api
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
status:
  availableReplicas: 2
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
