internal/web/ui/playground/data/web-app/resources/checkout__Service__checkout-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-08-16T18:20:58Z"
  name: checkout-api-svc
  namespace: checkout
  resourceVersion: "17786"
  uid: checkout-api-svc-uid
spec:
  clusterIP: 10.100.0.21
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: checkout-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
