internal/web/ui/playground/data/web-app/resources/ingress-nginx__Deployment__ingress-nginx-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2026-08-16T18:20:58Z"
  labels:
    app: ingress-nginx-controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
  resourceVersion: "17850"
  uid: ingress-nginx-controller-deploy-uid
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-nginx-controller
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ingress-nginx-controller
    spec:
      containers:
      - envFrom: []
        image: registry.k8s.io/ingress-nginx/controller:v1.10.1
        imagePullPolicy: IfNotPresent
        name: ingress-nginx-controller
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
status:
  availableReplicas: 2
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
