internal/web/ui/playground/data/web-app/resources/ingress-nginx__Service__ingress-nginx-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-08-16T18:20:58Z"
  name: ingress-nginx-controller-svc
  namespace: ingress-nginx
  resourceVersion: "17786"
  uid: ingress-nginx-controller-svc-uid
spec:
  clusterIP: 10.100.0.23
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ingress-nginx-controller
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
