internal/web/ui/playground/data/web-app/resources/monitoring__Deployment__prometheus-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2026-08-16T18:20:58Z"
  labels:
    app: prometheus-server
  name: prometheus-server
  namespace: monitoring
  resourceVersion: "17850"
  uid: prometheus-server-deploy-uid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
      - envFrom:
          - configMapRef:
              name: prometheus-config
        image: prom/prometheus:v2.53.0
        imagePullPolicy: IfNotPresent
        name: prometheus-server
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
status:
  availableReplicas: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
