internal/web/ui/playground/data/web-app/resources/monitoring__Pod__prometheus-server-3a6b9d2e7-3a6b900.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2026-08-16T18:20:58Z"
  generateName: prometheus-server-3a6b9d2e7-
  labels:
    app: prometheus-server
    pod-template-hash: 3a6b9d2e7
  name: prometheus-server-3a6b9d2e7-3a6b900
  namespace: monitoring
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: prometheus-server-3a6b9d2e7
    uid: prometheus-server-3a6b9d2e7-uid
  resourceVersion: "17836"
  uid: prometheus-server-3a6b9d2e7-3a6b900-uid
spec:
  containers:
  - envFrom:
      - configMapRef:
          name: prometheus-config
    image: prom/prometheus:v2.53.0
    imagePullPolicy: IfNotPresent
    name: prometheus-server
    ports:
    - containerPort: 80
      protocol: TCP
    resources:
      limits:
        cpu: 250m
        memory: 128Mi
      requests:
        cpu: 50m
        memory: 64Mi
  nodeName: k8s-worker-05
  restartPolicy: Always
  schedulerName: default-scheduler
  serviceAccount: default
  serviceAccountName: default
status:
  phase: Running
  podIP: 10.244.149.10
  qosClass: Burstable
  startTime: "2026-08-16T18:20:58Z"
