internal/web/ui/playground/data/web-app/resources/monitoring__Service__prometheus-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-08-16T18:20:58Z"
  name: prometheus-server-svc
  namespace: monitoring
  resourceVersion: "17786"
  uid: prometheus-server-svc-uid
spec:
  clusterIP: 10.100.0.24
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: prometheus-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
