internal/web/ui/playground/data/web-app/resources/shop-frontend__Ingress__storefront-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"storefront-ingress","namespace":"shop-frontend"},"spec":{"rules":[{"host":"shop.example.com","http":{"paths":[{"backend":{"service":{"name":"storefront-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2026-08-16T18:20:58Z"
  generation: 1
  name: storefront-ingress
  namespace: shop-frontend
  resourceVersion: "17790"
  uid: cfd81268-43f3-4b76-baa8-7032f6ebba5f
spec:
  rules:
  - host: shop.example.com
    http:
      paths:
      - backend:
          service:
            name: storefront-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
