internal/web/ui/playground/data/web-app/resources/shop-frontend__Pod__storefront-655c9d9479-lfnf5.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2026-08-16T18:20:58Z"
  generateName: storefront-655c9d9479-
  generation: 1
  labels:
    app: storefront
    pod-template-hash: 655c9d9479
  name: storefront-655c9d9479-lfnf5
  namespace: shop-frontend
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: storefront-655c9d9479
    uid: fcd5b6bd-c450-43fd-bd69-dc949196fdc1
  resourceVersion: "17826"
  uid: f0f27dfe-f767-41f8-808a-e60dc1b72079
spec:
  containers:
  - envFrom:
    - configMapRef:
        name: storefront-config
    image: nginx:1.27-alpine
    imagePullPolicy: IfNotPresent
    name: storefront
    ports:
    - containerPort: 80
      protocol: TCP
    resources:
      limits:
        cpu: 250m
        memory: 128Mi
      requests:
        cpu: 50m
        memory: 64Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-jwgtb
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: k8s-worker-01
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-jwgtb
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2026-08-16T18:21:07Z"
    observedGeneration: 1
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2026-08-16T18:20:58Z"
    observedGeneration: 1
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2026-08-16T18:21:07Z"
    observedGeneration: 1
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2026-08-16T18:21:07Z"
    observedGeneration: 1
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2026-08-16T18:20:58Z"
    observedGeneration: 1
    status: "True"
    type: PodScheduled
  containerStatuses:
  - allocatedResources:
      cpu: 50m
      memory: 64Mi
    containerID: docker://776a1dadd1183760c2ea986a52e28ded095dc72d79ecd9de947522fcb5e2c422
    image: nginx:1.27-alpine
    imageID: docker-pullable://nginx@sha256:65645c7bb6a0661892a8b03b89d0743208a18dd2f3f17a54ef4b76fb8e2f2a10
    lastState: {}
    name: storefront
    ready: true
    resources:
      limits:
        cpu: 250m
        memory: 128Mi
      requests:
        cpu: 50m
        memory: 64Mi
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2026-08-16T18:21:07Z"
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-jwgtb
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 192.168.49.2
  hostIPs:
  - ip: 192.168.49.2
  observedGeneration: 1
  phase: Running
  podIP: 10.244.0.5
  podIPs:
  - ip: 10.244.0.5
  qosClass: Burstable
  startTime: "2026-08-16T18:20:58Z"
