internal/web/ui/playground/data/web-app/resources/shop-frontend__Service__storefront-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"storefront-svc","namespace":"shop-frontend"},"spec":{"ports":[{"port":80,"targetPort":80}],"selector":{"app":"storefront"}}}
  creationTimestamp: "2026-08-16T18:20:58Z"
  name: storefront-svc
  namespace: shop-frontend
  resourceVersion: "17786"
  uid: 81588623-fcc2-416d-bc5e-07ba8ba5e394
spec:
  clusterIP: 10.105.187.232
  clusterIPs:
  - 10.105.187.232
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: storefront
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
